// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom link get transaction fetches with all filter 1`] = `
Object {
  "body": Object {
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "term": Object {
              "processor.event": "transaction",
            },
          },
          Object {
            "term": Object {
              "service.name": "foo",
            },
          },
          Object {
            "term": Object {
              "service.environment": "bar",
            },
          },
          Object {
            "term": Object {
              "transaction.type": "qux",
            },
          },
          Object {
            "term": Object {
              "transaction.name": "baz",
            },
          },
        ],
      },
    },
  },
  "index": "myIndex",
  "size": 1,
  "terminateAfter": 1,
}
`;

exports[`custom link get transaction fetches without filter 1`] = `
Object {
  "body": Object {
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "term": Object {
              "processor.event": "transaction",
            },
          }
        ],
      },
    },
  },
  "index": "myIndex",
  "size": 1,
  "terminateAfter": 1,
}
`;

exports[`custom link get transaction removes not listed filters from query 1`] = `
Object {
  "body": Object {
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "term": Object {
              "processor.event": "transaction",
            },
          },
          Object {
            "term": Object {
              "service.name": "foo",
            },
          },
        ],
      },
    },
  },
  "index": "myIndex",
  "size": 1,
  "terminateAfter": 1,
}
`;
